Fix mis-aligned door icon in Safari

--- a/sass/_map.scss
+++ b/sass/_map.scss
@@ -31,8 +31,10 @@
 }
 
 .cell--door i {
+    width: 100%;
     position: absolute;
     top: 50%;
+    left: 0;
     margin-top: -8px;
 }
 
